neovim to have a handy terminal

--- a/overlay.html
+++ b/overlay.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="overlay">
-    <h1 id="project">Message Queue Project</h1>
+    <h1 id="topic">Message Queue Project</h1>
 
     <h2 id="progress">
       <span class="done">log → index</span>
