remove the done part

--- a/overlay.html
+++ b/overlay.html
@@ -7,14 +7,9 @@
 </head>
 <body>
   <div id="overlay">
-    <h1 id="topic">Message Queue Project</h1>
+    <h1 id="topic"></h1>
 
     <h2 id="progress">
-      <span class="done">log → index</span>
-      <span class="arrow"> → </span>
-      <span class="current">segment</span>
-      <span class="arrow"> → </span>
-      <span class="next">replication</span>
     </h2>
   </div>
 
